--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -7521,6 +7521,10 @@ body.has-active-menu {
     background-image: -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: linear-gradient(0deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), linear-gradient(0deg, #0080ff 0, #0080ff 100%);
+    -webkit-background-size: cover;
     background-size: cover
 }
 
@@ -7538,7 +7542,10 @@ body.has-active-menu {
 .ln-versions div.background {
     width: 100%;
     height: 100%;
-   
+    background: url(pages/index/im_luno_default_circles.png) right center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover
 }
 
 .ln-versions p {
@@ -7716,7 +7723,12 @@ body.has-active-menu {
 .ln-hero,
 .ln-hero-sm {
     position: relative;
-   
+    background-image: url(common/img/im_luno_default_circles.png);
+    background-image: url(common/img/im_luno_default_circles.png), -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), linear-gradient(0deg, #0080ff 0, #0080ff 100%);
+    -webkit-background-size: cover;
+    background-size: cover
 }
 
 .ln-hero .container h1,
@@ -8377,6 +8389,7 @@ a.ln-card .ln-card-inner {
     -webkit-appearance: none;
     padding: 2px 16px 1px 2px;
     cursor: pointer;
+    background: url(common/img/select.png) no-repeat right center;
     -webkit-background-size: 12px 12px;
     background-size: 12px 12px;
     -moz-appearance: none
@@ -8554,7 +8567,17 @@ a.ln-card .ln-card-inner {
 .ln-datepicker .bootstrap-datetimepicker-widget.dropdown-menu {
     padding: 30px 20px
 }
- 
+
+.ln-date-left:before {
+    content: url(../../_site/svg/back-arrow.svg)
+}
+
+.ln-date-right:before {
+    display: inline-block;
+    content: url(../../_site/svg/back-arrow.svg);
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY(180deg)
+}
 
 .ln-date-control a {
     padding: 6px 0;
@@ -8761,7 +8784,10 @@ a.ln-card .ln-card-inner {
 
 .ln-account-body {
     height: auto;
-   
+    background: url(common/img/im_luno_account_circles.png) center center no-repeat;
+    background: url(common/img/im_luno_account_circles.png) center center no-repeat, -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(common/img/im_luno_account_circles.png) center center no-repeat, -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(common/img/im_luno_account_circles.png) center center no-repeat, linear-gradient(0deg, #0080ff 0, #0080ff 100%)
 }
 
 .ln-account-body .ln-account-wrapper {
@@ -9316,6 +9342,7 @@ font-family: 'Poppins', sans-serif;
     right: 0;
     bottom: 0;
     left: 55%;
+    background: url(common/modules/easy-steps/3steps-bg.png) center;
     background-position: 0 0;
     -webkit-background-size: cover;
     background-size: cover
@@ -9326,11 +9353,31 @@ font-family: 'Poppins', sans-serif;
     width: 310px;
     height: 643px;
     margin: 0 0 0 36px;
-     background-repeat: no-repeat;
+    background: url(pages/index/steps-en/device.png);
+    background-repeat: no-repeat;
     -webkit-background-size: cover;
     background-size: cover
 }
 
+html[lang=id] .easy-steps .steps-bg-wrapper .steps-bg .ln-device {
+    background-image: url(pages/index/steps-id/device.png)
+}
+
+html[lang=fr] .easy-steps .steps-bg-wrapper .steps-bg .ln-device {
+    background-image: url(pages/index/steps-fr/device.png)
+}
+
+html[lang=it] .easy-steps .steps-bg-wrapper .steps-bg .ln-device {
+    background-image: url(pages/index/steps-it/device.png)
+}
+
+html[lang=pl] .easy-steps .steps-bg-wrapper .steps-bg .ln-device {
+    background-image: url(pages/index/steps-pl/device.png)
+}
+
+html[lang=nl] .easy-steps .steps-bg-wrapper .steps-bg .ln-device {
+    background-image: url(pages/index/steps-nl/device.png)
+}
 
 .easy-steps .steps-bg-wrapper .steps-bg .owl-carousel {
     position: absolute;
@@ -9435,7 +9482,9 @@ font-family: 'Poppins', sans-serif;
     background: -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background: -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background: linear-gradient(0deg, #0080ff 0, #0080ff 100%);
-   
+    background: url(pages/index/im_luno_landing_circles_refresh.png) left center no-repeat/cover, -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(pages/index/im_luno_landing_circles_refresh.png) left center no-repeat/cover, -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(pages/index/im_luno_landing_circles_refresh.png) left center no-repeat/cover, linear-gradient(0deg, #0080ff 0, #0080ff 100%)
 }
 
 .ln-homepage .ln-hero .ln-container-width {
@@ -9612,7 +9661,8 @@ font-family: 'Poppins', sans-serif;
     width: 30%;
     height: 65%;
     background: #00f;
-     -webkit-background-size: contain;
+    background: url(pages/index/img_header-devices_eur@2x.refresh.png) no-repeat center center;
+    -webkit-background-size: contain;
     background-size: contain;
     -webkit-transform: translateY(-45%);
     -ms-transform: translateY(-45%);
@@ -9620,7 +9670,25 @@ font-family: 'Poppins', sans-serif;
     transform: translateY(-45%)
 }
 
- 
+html[lang=id] .ln-homepage .ln-hero .ln-hero-devices {
+    background-image: url(pages/index/img_header-devices_idr.refresh.png)
+}
+
+html[lang=it] .ln-homepage .ln-hero .ln-hero-devices {
+    background-image: url(pages/index/img_header-devices_it@2x.refresh.png)
+}
+
+html[lang=pl] .ln-homepage .ln-hero .ln-hero-devices {
+    background-image: url(pages/index/img_header-devices_pl@2x.refresh.png)
+}
+
+html[lang=nl] .ln-homepage .ln-hero .ln-hero-devices {
+    background-image: url(pages/index/img_header-devices_nl@2x.refresh.png)
+}
+
+html[lang=fr] .ln-homepage .ln-hero .ln-hero-devices {
+    background-image: url(pages/index/img_header-devices_fr@2x.refresh.png)
+}
 
 @media screen and (min-width:992px) {
     .ln-homepage .ln-hero .ln-hero-devices {
@@ -9766,7 +9834,9 @@ font-family: 'Poppins', sans-serif;
 
 @media screen and (max-width:992px) {
     .ln-homepage .ln-hero {
-       
+        background: url(pages/index/im_luno_landing_circles_mobile.png) center center no-repeat/cover, -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+        background: url(pages/index/im_luno_landing_circles_mobile.png) center center no-repeat/cover, -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+        background: url(pages/index/im_luno_landing_circles_mobile.png) center center no-repeat/cover, linear-gradient(0deg, #0080ff 0, #0080ff 100%)
     }
 }
 
@@ -9918,7 +9988,8 @@ font-family: 'Poppins', sans-serif;
 }
 
 button.ada-chat-button {
-     border-radius: 50% 50% 4px 50%!important;
+    background-image: url(pages/index/chatbot_icon.svg)!important;
+    border-radius: 50% 50% 4px 50%!important;
     -webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, .3)!important;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, .3)!important
 }
@@ -9931,7 +10002,9 @@ button.ada-chat-button:after {
     background-image: -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: linear-gradient(0deg, #0080ff 0, #0080ff 100%);
-   
+    background-image: url(common/img/im_luno_default_circles.png), -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), linear-gradient(0deg, #0080ff 0, #0080ff 100%);
     background-repeat: no-repeat;
     background-position: right center;
     -webkit-background-size: cover;
@@ -10194,7 +10267,13 @@ button.ada-chat-button:after {
     background-image: -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: linear-gradient(0deg, #0080ff 0, #0080ff 100%);
-   
+    background-image: url(common/img/im_luno_default_circles.png), -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(common/img/im_luno_default_circles.png), linear-gradient(0deg, #0080ff 0, #0080ff 100%);
+    background-repeat: no-repeat;
+    background-position: right center;
+    -webkit-background-size: cover;
+    background-size: cover
 }
 
 .ln-careers-wrapper .ln-hero-sm .container {
@@ -10439,6 +10518,7 @@ button.ada-chat-button:after {
 
 .ln-careers-wrapper .ln-perks {
     padding-bottom: 60px;
+    background: url(common/img/circles-bg.jpg) center;
     background-color: #0080ff;
     -webkit-background-size: cover;
     background-size: cover
@@ -10549,12 +10629,16 @@ button.ada-chat-button:after {
     bottom: 0;
     left: 0;
     z-index: 9;
-   
+    background: url(pages/index/im_luno_landing_circles_refresh.png) left center no-repeat/cover, -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(pages/index/im_luno_landing_circles_refresh.png) left center no-repeat/cover, -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(pages/index/im_luno_landing_circles_refresh.png) left center no-repeat/cover, linear-gradient(0deg, #0080ff 0, #0080ff 100%)
 }
 
 @media only screen and (max-width:1024px) {
     .ln-loading-screen {
-        
+        background: url(pages/index/im_luno_landing_circles_mobile.png) center center no-repeat/cover, -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+        background: url(pages/index/im_luno_landing_circles_mobile.png) center center no-repeat/cover, -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+        background: url(pages/index/im_luno_landing_circles_mobile.png) center center no-repeat/cover, linear-gradient(0deg, #0080ff 0, #0080ff 100%)
     }
 }
 
@@ -11316,6 +11400,7 @@ button.ada-chat-button:after {
 }
 
 .ln-security-bg.ln-section {
+    background: url(pages/security/stars-bg.jpg) center center;
     background-color: #0080ff;
     -webkit-background-size: cover;
     background-size: cover
@@ -11364,7 +11449,11 @@ button.ada-chat-button:after {
     background-image: -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background-image: linear-gradient(0deg, #0080ff 0, #0080ff 100%);
-   
+    background-image: url(pages/index/im_luno_landing_circles.png), -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(pages/index/im_luno_landing_circles.png), -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background-image: url(pages/index/im_luno_landing_circles.png), linear-gradient(0deg, #0080ff 0, #0080ff 100%);
+    background-repeat: no-repeat;
+    background-position: right center;
     -webkit-background-size: cover;
     background-size: cover
 }
@@ -13068,7 +13157,9 @@ h2 a:hover {
     background: -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background: -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
     background: linear-gradient(0deg, #0080ff 0, #0080ff 100%);
-  
+    background: url(common/img/im_luno_account_circles.png), -webkit-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(common/img/im_luno_account_circles.png), -o-linear-gradient(90deg, #0080ff 0, #0080ff 100%);
+    background: url(common/img/im_luno_account_circles.png), linear-gradient(0deg, #0080ff 0, #0080ff 100%);
     -webkit-background-size: cover;
     background-size: cover
 }
@@ -13363,6 +13454,7 @@ a.ln-invite-wrapper.why-use .ln-why-use .owl-item-inner .ln-card-inner {
     font-size: 14px;
     color: #0091ff;
     cursor: pointer;
+    background: #fff url(common/img/ic_dropdown_down.svg) no-repeat 45px center;
     border: 1px solid #0091ff;
     border-radius: 2px;
     -moz-appearance: none
@@ -13769,6 +13861,7 @@ dd:not(last-child) {
 }
 
 .grabbing {
+    cursor: url(grabbing.png) 8 8, move
 }
 
 .owl-carousel .owl-item,
