--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="ln-footer">
   <div class="container">
     <div class="ln-footer-logo">
-      <p class="ln-copright">© Copyright 2018</p>
+      <p class="ln-copright">© 2017</p>
       <div class="ln-social">
         <div>
           <a href="" target="_blank">
